gateway/shopnow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shopnow-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopnow-gateway
spec:
  hosts:
    - "*"
  gateways:
    - shopnow-gateway
  http:
    - match:
        - uri:
            prefix: /api/accounts
        - uri:
            prefix: /api/products
        - uri:
            prefix: /api/orders
      route:
        - destination:
            host: gateway
            port:
              number: 8080
